--- a/etl_prototypes/proto_fixtures_etl.ipynb
+++ b/etl_prototypes/proto_fixtures_etl.ipynb
@@ -219,7 +219,7 @@
     "    url_addons = [\"/statistics\", \"/lineups\", \"/events\"]\n",
     "    querystring = {\"league\":\"39\",\"season\":\"2023\"}\n",
     "    headers = {\n",
-    "\t    \"X-RapidAPI-Key\": \"09024c9128msh264ab4739c90641p185fcajsnb24343c30706\",\n",
+    "\t    \"X-RapidAPI-Key\": \"[key value]\",\n",
     "\t    \"X-RapidAPI-Host\": \"api-football-v1.p.rapidapi.com\"\n",
     "    }\n",
     "    conn_string = 'postgresql://api_football_user:tkilper42@127.0.0.1/api_football_db'\n",
