--- a/etl_prototypes/proto_players_etl.ipynb
+++ b/etl_prototypes/proto_players_etl.ipynb
@@ -104,7 +104,7 @@
     "    # params/configs\n",
     "    # later read config\n",
     "    headers = {\n",
-    "\t    \"X-RapidAPI-Key\": \"09024c9128msh264ab4739c90641p185fcajsnb24343c30706\",\n",
+    "\t    \"X-RapidAPI-Key\": \"[key value]\",\n",
     "\t    \"X-RapidAPI-Host\": \"api-football-v1.p.rapidapi.com\"\n",
     "    }\n",
     "    url = \"https://api-football-v1.p.rapidapi.com/v3/players\"\n",
