--- a/etl_prototypes/proto_venues_etl.ipynb
+++ b/etl_prototypes/proto_venues_etl.ipynb
@@ -110,7 +110,7 @@
     "    url = \"https://api-football-v1.p.rapidapi.com/v3/venues\"\n",
     "    querystring = {\"country\":\"England\"}\n",
     "    headers = {\n",
-    "\t    \"X-RapidAPI-Key\": \"09024c9128msh264ab4739c90641p185fcajsnb24343c30706\",\n",
+    "\t    \"X-RapidAPI-Key\": \"[key value]\",\n",
     "\t    \"X-RapidAPI-Host\": \"api-football-v1.p.rapidapi.com\"\n",
     "    }\n",
     "    conn_string = 'postgresql://api_football_user:tkilper42@127.0.0.1/api_football_db'\n",
